--- a/src/assets/scss/_search.scss
+++ b/src/assets/scss/_search.scss
@@ -16,8 +16,8 @@ $border-color: rgba(0, 0, 0, 0.2);
   }
 
   &__sidenav {
-    min-width: 250px;
-    max-width: 250px;
+    min-width: 260px;
+    max-width: 260px;
     border-right: 2px solid $border-color;
 
     &__query {
@@ -50,50 +50,40 @@ $border-color: rgba(0, 0, 0, 0.2);
     &__button {
 
       &--advanced {
-        margin-bottom: 20px;
-        text-align: center;
-        font-size: 12px;
+        margin-bottom: 10px;
         cursor: pointer;
 
         span {
           vertical-align: middle;
+          font-size: 11px;
         }
 
         md-icon {
+          height: 16px;
+          width: 16px;
+          font-size: 16px;
           vertical-align: middle;
         }
       }
     }
 
     &__options {
-      margin: 15px 0;
+      margin: 0 -5px;
     }
 
     &__option {
-      margin-bottom: 5px;
-      height: 26px;
-      line-height: 26px;
-      font-size: 13px;
+      display: inline-block;
+      margin: 5px;
+      padding: 3px 7px;
+      font-size: 12px;
       text-align: center;
-      border-radius: 15px;
+      border-radius: 5px;
       border: 1px solid rgba(0, 0, 0, 0.3);
 
       &__content {
         position: relative;
         display: inline-block;
-        padding: 0 5px;
         box-sizing: border-box;
-      }
-
-      .content--disabled {
-        &::after {
-          position: absolute;
-          left: 0;
-          right: 0;
-          top: 50%;
-          border-bottom: 2px solid rgba(0,0,0,0.5);
-          content: "";
-        }
       }
 
       &__label {
@@ -101,14 +91,14 @@ $border-color: rgba(0, 0, 0, 0.2);
       }
 
       &__value {
-        margin-left: 3px;
-        font-weight: 600;
+        margin-right: 5px;
+        font-weight: 500;
       }
 
       md-icon {
         height: 16px;
         width: 16px;
-        border: 1px solid rgba(0, 0, 0, 0.3);
+        border: 1px solid rgba(0, 0, 0, 0.5);
         border-radius: 50%;
         vertical-align: middle;
         font-size: 16px;
@@ -117,28 +107,48 @@ $border-color: rgba(0, 0, 0, 0.2);
       }
     }
 
-    &__title {
-      margin-top: 18px;
-      margin-bottom: 5px;
-      font-size: 20px;
-      font-weight: 700;
-      color: #A6A6A6;
+    .option--disabled {
+      color: rgba(0, 0, 0, 0.2);
+      border-color: rgba(0, 0, 0, 0.2);
 
-      &--after {
-        margin-top: 35px;
+      .search__sidenav__option__content {
+        &::after {
+          position: absolute;
+          left: 0;
+          right: 0;
+          top: 50%;
+          border-bottom: 2px solid rgba(0,0,0,0.2);
+          content: "";
+        }
+      }
+
+      md-icon {
+        color: rgba(0,0,0,0.3);
+        border-color: rgba(0,0,0,0.3);
       }
     }
 
+    &__title {
+      margin-top: 35px;
+      font-size: 17px;
+      font-weight: 500;
+    }
+
     &__subtitle {
-      margin-top: 15px;
+      margin: 25px 0 10px 0;
       font-size: 16px;
       font-weight: 500;
-      color: black;
+    }
+
+    &__date {
+      margin-top: 5px;
+      font-size: 12px;
+      color: rgba(0, 0, 0, 0.4);
     }
 
     &__item {
-      margin-top: 8px;
-      font-size: 14px;
+      margin-bottom: 8px;
+      font-size: 13px;
       color: #7C7C7C;
     }
 
