--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,6 +16,7 @@
 @import "assets/scss/_search.scss";
 @import "assets/scss/_advanced-search.scss";
 @import "assets/scss/_datepicker-custom.scss";
+@import "assets/scss/_notifications-list.scss";
 
 /***************
   HTML Styles
