Change models and graph queries

--- a/src/app/pages/transactions-page/transaction-view/transaction-view.component.html
+++ b/src/app/pages/transactions-page/transaction-view/transaction-view.component.html
@@ -17,7 +17,7 @@
         </div>
         <div class="entity-view__content__body__column__item">
           <span class="entity-view__content__body__column__item__label">Date:</span>
-          <span>{{entity.date.substring(0, 10)}}</span>
+          <span>{{entity.createdAt.substring(0, 10)}}</span>
         </div>
         <div class="entity-view__content__body__column__item">
           <span class="entity-view__content__body__column__item__label">Amount:</span>
@@ -34,7 +34,7 @@
         </div>
         <div class="entity-view__content__body__column__item">
           <span class="entity-view__content__body__column__item__label">Bill Date:</span>
-          <span>{{entity.rebill.billDate}}</span>
+          <span>{{entity.rebill.billAt}}</span>
         </div>
       </div>
     </div>
