--- a/src/app/pages/transactions-page/transaction/transaction.component.html
+++ b/src/app/pages/transactions-page/transaction/transaction.component.html
@@ -15,7 +15,7 @@
               [title]="'GENERAL DETAILS'"
               [data]="[
                 {name:'ID', value: entity.id},
-                {name:'Date', value: entity.date},
+                {name:'Date', value: entity.createdAt},
                 {name:'Amount', value: entity.amount},
                 {name:'Processor Response', value: entity.processorResponse.message}
               ]">
