--- a/src/assets/scss/_entity-view.scss
+++ b/src/assets/scss/_entity-view.scss
@@ -5,6 +5,10 @@ $blue-color: #4A90E2;
   position: relative;
   min-height: calc(100vh - 65px);
 
+  md-tab-header {
+    display: none;
+  }
+
   &__title {
     padding: 20px 60px;
     font-size: 20px;
